--- a/manifests/4.statefulset.yml
+++ b/manifests/4.statefulset.yml
@@ -20,13 +20,13 @@ spec:
         - containerPort: 80
           name: web
         volumeMounts:
-        - name: www
+        - name: htt
           mountPath: /usr/share/nginx/html
       imagePullSecrets:
             - name: dockerhub-secret
   volumeClaimTemplates:
   - metadata:
-      name: www
+      name: htt
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
