--- a/manifests/hpadeploy.yml
+++ b/manifests/hpadeploy.yml
@@ -4,14 +4,14 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: apphpa
 spec:
-  ScaleTargetRef:
+  scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: nginx-deployment
   minReplicas: 3
   maxReplicas: 8
   metrics:
-    - type: Resorce
+    - type: Resource
       resource:
         name: cpu
         target:
